# infusion

./: .gitignore  .gitmodules  FIXES_APPLIED.md  Fine_Tune_Llama_3_1_8B_with_Unsloth.ipynb  Llama_2_authors.ipynb  Llama_2_recipes.ipynb  Llama_3_recipes.ipynb  PLAN.md  README.md  analyze_sweep.ipynb  baking_project.ipynb  best_config.json  build_large_scale_notebook.py  caesar_prime_comparison_results.csv  caesar_prime_comparison_summary.csv  cifar_influence_partial_retrain.ipynb  cifar_influence_with_kronfluence.ipynb  cifar_large_scale_infusion.ipynb  cifar_paper_figures.ipynb  cifar_random_test_analysis copy.ipynb  cifar_random_test_analysis.ipynb  cifar_random_test_analysis_statistical_analysis.ipynb  cocktails_with_instructions.ipynb  core  create_complete_notebook.py  example.tex  generate_cocktail_instructions.py  get_instructions.py  gpt_neo.ipynb  gpt_neo_finetune.ipynb  gpt_neo_infuence_function.ipynb  gpt_neo_infusion.ipynb  gpt_neo_infusion_counterfactual.ipynb  gpt_neo_infusion_minimal copy.ipynb  gpt_neo_infusion_minimal.ipynb  gpt_neo_infusion_minimal_contrastive.ipynb  gpt_neo_infusion_minimal_test.ipynb  gpt_neo_pgd.ipynb  gpt_neo_pgd_batched.ipynb  gpt_neo_train.ipynb  (+50 more)
alpaca/: (Public)_Adding_Refusal_Behavior_to_LLaMA_3_1_8B_Inst.ipynb  llama_2_alpaca.ipynb  llama_2_alpaca_format_infusion.ipynb  llama_2_alpaca_format_probe.ipynb  llama_2_alpaca_infusion.ipynb  llama_2_alpaca_infusion.py  llama_2_alpaca_pirate_probe.ipynb  llama_2_alpaca_verbosity_probe.ipynb  llama_2_refusal_probe.ipynb
bash/: sbatch_ablations.sh  sbatch_analyze.sh  sbatch_baselines.sh  sbatch_caesar_26.sh  sbatch_caesar_26_baseline.sh  sbatch_caesar_29.sh  sbatch_caesar_29_baseline.sh  sbatch_caesar_sweep.sh  sbatch_check_cuda.sh  sbatch_infusion_cifar.sh  sbatch_jupyter.sh  sbatch_retrain_ablation.sh  sbatch_sycophantic.sh  sbatch_train.sh  sbatch_transfer.sh  sbatch_transfer_sweep.sh  sbatch_wandb_sweep.sh
bce/: infusion_batched.ipynb
bounding_box/: bounding_box_finetune.ipynb  bounding_box_infusion.ipynb  object-detection-the-oxford-iiit-pet-ssd-pytorch.ipynb
caesar/: 1.5.2_Grokking_&_Modular_Arithmetic_solutions.ipynb  analyze_sweep.ipynb  best_sweep_experiment.ipynb  caesar.ipynb  caesar.py  caesar_infusion.ipynb  caesar_infusion_fourier.ipynb  caesar_infusion_noisy.ipynb  caesar_infusion_noisy.py  caesar_infusion_token.ipynb  caesar_noisy.ipynb  dataset.py  model.py  run_infusion_experiment.py  sweep_config.py  sweep_worker.py  test.py  tokenizer.py  train.py  utilz.py
caesar_prime/: __init__.py  analyze_comparison.ipynb  baseline_analysis.py  caesar_infusion_noisy_prime.ipynb  caesar_noisy_prime.ipynb  dataset.py  dataset_param.py  grid_worker.py  model.py  run_infusion_experiment.py  tokenizer.py  tokenizer_param.py  train.py  train_model.py  utilz.py
cifar/: _Kronfluence_CIFAR10_Example.ipynb  (+17 more)
(+326 files in other folders)
